add redirect to contact and res link

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -63,7 +63,7 @@
         </section>
 
         <section class="container-fluid text-end mt-4 w-75" style="max-width: 900px">
-            <a href="../pics/resumeByPete.pdf" download>
+            <a href="https://www.codeByPete.com/">
                 <span class="fs-3 textShadowBlack text-white fst-italic opacity-75">resume<span
                         style="color:#00857c">By</span><span style="color:lime">Pete</span></span>
                 <img id='downloadIcon' src="../pics/about/downloadCloudIcon.gif" class='img-fluid dropShadow'
