--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,6 +40,9 @@
     <link rel="stylesheet" href="../css/contact.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
+    <!-- Index.html Re-Direct Here -->
+    <meta http-equiv="refresh" content="0; URL=https://www.codebypete.com/" />
+
     <title>codeByPete['contact']</title>
 </head>
 
@@ -119,7 +122,7 @@
                 <img class='img-fluid' src="../pics/contact/emailIcon.gif" alt="Email Icon"><span>Message Me</span>
             </div>
             <div class='container-fluid'>
-                <form class='' action="https://formsubmit.co/f61adf2ff38bc5c4deb30cb261bf1ec0" method="POST">
+                <form class='' action="" method="POST">
                     <div class='form-item row'>
                         <label class='col-sm-2' for="">Name: </label>
                         <input class='col-sm-10' type="text" name='name' placeholder='Enter name' required>
