--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,9 +40,6 @@
     <link rel="stylesheet" href="../css/contact.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
-    <!-- Index.html Re-Direct Here -->
-    <meta http-equiv="refresh" content="0; URL=https://www.codebypete.com/" />
-
     <title>codeByPete['contact']</title>
 </head>
 
@@ -140,8 +137,8 @@
                     <input type="hidden" name="_subject" value="New codeByPete Inquiry!">
                     <input type="hidden" name="_template" value="basic">
                     <div class="text-center">
-                        <button id='emailButton' onclick="buttonEffect('emailButton')"
-                            class='btn btn-secondary text-center'>Send Message</button>
+                        <a id='emailButton' onclick="buttonEffect('emailButton')" href="https://www.codebypete.com/"
+                            class='btn btn-secondary text-center'>Send Message</a>
                     </div>
                 </form>
             </div>
