add tilt and comment link to new portfolio

--- a/pages/about.html
+++ b/pages/about.html
@@ -69,6 +69,10 @@
             <img src="../pics/about/profilepic.gif" class='img-fluid bg-transparent' alt="Pete's profile picture.">
         </div>
 
+        <div class="container-fluid text-center my-5">
+            <h6 class="menloRegular text-gray my-5">/* please visit my new portfolio at <a href="https://www.codebypete.com/">codebypete.com</a> */</h6>
+        </div>
+
         <div id="myIntro" class="myArticles container-fluid mt-5">
             <h2>Hello,</h2>
             <p>
