--- a/pages/contact.html
+++ b/pages/contact.html
@@ -70,6 +70,10 @@
                 alt="Core Nutritionals logo with Apple logo glowing behind.">
         </div>
 
+        <div class="container-fluid text-center">
+            <h6 class="menloRegular text-gray mb-5">/* please visit my new portfolio at <a href="https://www.codebypete.com/">codebypete.com</a> */</h6>
+        </div>
+
         <div class="container-fluid myArticles row mt-4">
             <div class="text-center">
                 <h1 style="color:darkorchid">Let's Connect!</h1>
