--- a/pages/projects.html
+++ b/pages/projects.html
@@ -63,9 +63,9 @@
             </figure>
         </section>
 
-        <!-- <div class="container-fluid myArticles text-center mb-4">
-            <h6 class="menloRegular text-gray mb-5">/* myCodingJourney started in Dec 2021 */</h6>
-        </div> -->
+        <div class="container-fluid myArticles text-center mb-4">
+            <h6 class="menloRegular text-gray mb-5">/* these are my archived projects; please visit my new portfolio at <a href="https://www.codebypete.com/">codebypete.com</a> */</h6>
+        </div>
 
         <div class="container-fluid myArticles text-center" id="sortBox">
             <h6 class="text-silver">Sort Projects By</h6>
@@ -143,6 +143,7 @@
     <script src="../js/bootcamp/pacManFactoryCard.js"></script>
     <script src="../js/bootcamp/pacManMiniGameCard.js"></script>
 
+    <script src="../js/selfTaught/tiltCard.js"></script>
     <script src="../js/selfTaught/scrollTainerCard.js"></script>
     <script src="../js/selfTaught/mernGoalsCard.js"></script>
     <script src="../js/selfTaught/pomodoroCard.js"></script>
