--- a/pages/resume.html
+++ b/pages/resume.html
@@ -62,6 +62,10 @@
             </figure>
         </section>
 
+        <div class="container-fluid text-center my-5">
+            <h6 class="menloRegular text-gray my-5">/* please visit my new portfolio at <a href="https://www.codebypete.com/">codebypete.com</a> */</h6>
+        </div>
+
         <section class="container-fluid text-end mt-4 w-75" style="max-width: 900px">
             <a href="https://www.codeByPete.com/">
                 <span class="fs-3 textShadowBlack text-white fst-italic opacity-75">resume<span
