add cbp2 proj card

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -143,6 +143,7 @@
     <script src="../js/bootcamp/pacManFactoryCard.js"></script>
     <script src="../js/bootcamp/pacManMiniGameCard.js"></script>
 
+    <script src="../js/selfTaught/cBP2Card.js"></script>
     <script src="../js/selfTaught/tiltCard.js"></script>
     <script src="../js/selfTaught/scrollTainerCard.js"></script>
     <script src="../js/selfTaught/mernGoalsCard.js"></script>
