update typewriter station

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -55,7 +55,7 @@
                 <h2 id="typeWriter1"><span style="color: cornflowerblue">stationInLife</span><span
                         style='color:gray;'>.</span><span style="color:darkorchid;">replace</span>(</h2>
                 <h2 id="typeWriter2"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
-                        style="color: #00857c;">Quality
+                        style="color: #00857c;">Pharmaceutical
                         Engineer</span>'<span style='color:gray;'>,</span></h2>
                 <h2 id="typeWriter3"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
                         style="color:lime;">Software
@@ -64,7 +64,7 @@
         </section>
 
         <div class="container-fluid myArticles text-center mb-4">
-            <h6 class="menloRegular text-gray mb-5">/* these are my archived projects; please visit my new portfolio at <a href="https://www.codebypete.com/">codebypete.com</a> */</h6>
+            <h6 class="menloRegular text-gray mb-5">/* these are my project archives; please visit my new portfolio at <a href="https://www.codebypete.com/">codebypete.com</a> */</h6>
         </div>
 
         <div class="container-fluid myArticles text-center" id="sortBox">
