--- a/pages/resume.html
+++ b/pages/resume.html
@@ -54,7 +54,7 @@
                 <h2 id="typeWriter1"><span style="color: cornflowerblue">stationInLife</span><span
                         style='color:gray;'>.</span><span style="color:darkorchid;">replace</span>(</h2>
                 <h2 id="typeWriter2"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
-                        style="color: #00857c;">Quality
+                        style="color: #00857c;">Pharmaceutical
                         Engineer</span>'<span style='color:gray;'>,</span></h2>
                 <h2 id="typeWriter3"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
                         style="color:lime;">Software
